@@ -28,12 +28,10 @@
 	return f(i);
 }
 
-#if 0 // Bug #3239
 {typeret} f_wrap_{convention}({typearg} i) {convention}
 {
 	return f(i);
 }
-#endif
 #endif
 
 void
@@ -44,9 +42,7 @@ testCallingConvention(void)
   ASSERT(g(23, 1001u) == ({typeret})1024ul);
   ASSERT(h(23, 1001u, 10000000000ul) == ({typeret})10000001024ull);
   ASSERT(f_wrap_sdcc(23) == ({typeret})24);
-#if 0 // Bug #3239
   ASSERT(f_wrap_{convention}(23) == ({typeret})24);
-#endif
 #endif
 }
 
